<resources>
    <!-- ****** Login View Strings ****** -->
    <string name="app_name">DiagnoCom</string>
    <string name="login_app_name">DiagnoCom</string>
    <string name="login_full_name">Sistema Experto Diagnosticador\nde Enfermedades Comunes</string>
    <string name="login_bk">Fondo del login</string>
    <string name="app_icon">Icono de aplicacion login</string>
    <string name="login_alert">Presione acceder para comenzar</string>
    <string name="login_acc_btn">Acceder</string>
    <string name="frame_bk">Background</string>



    <!-- ****** SE1F View Strings ****** -->

    <!-- SE1F Notice Elements START -->
    <string name="se1f_notice">
        El presente sistema experto infiere un\n
        diagnóstico médico preliminar basado\n
        en los síntomas ingresados en la app.\n\n
        Se cotejan las entradas del usuario\n
        contra una base de reglas previas\n
        evaluadas por un experto en materia\n
        de salud para dictaminar un resultado\n
        genérico.\n\n
        Se recomienda acudir al médico para\n
        obtener detalles más específicos si\n
        presenta cualquiera de los síntomas\n
        que se exponen.\n\n
        Entiendo y estoy de acurdo:
    </string>
    <string name="se1f_accept_notice">Acepto</string>
    <string name="se1f_decline_notice">No acepto</string>

    <!-- SE1F Options Elements START -->
    <string name="se1f_frame_title">Lugar del malestar</string>
    <string name="se1f_frame_directions">
        Seleccione la opción que identifique\ndonde presenta incomodidad.
    </string>
    <string name="se1f_d_cabeza">Malestar en la cabeza</string>
    <string name="se1f_d_respiratorio">Malestar al respirar</string>
    <string name="se1f_d_digestivo">Malestar al comer u obrar</string>
    <string name="se1f_d_interno">Malestar en abdomen o espalda</string>
    <string name="se1f_d_urinario">Malestar al orinar</string>
    <string name="se1f_d_cutaneo">Malestar en la piel</string>
    <string name="se1f_next_directions">Presione siguiente para continuar con el\ndiagnóstico.</string>

    <!-- SE1F Dx Elements START -->
    <string name="se1f_dx_introduction">
        Por su respuesta se concluye\n que su afección concuerda\ncon un:
    </string>
    <string name="se1f_dx_empty">empty</string>



    <!-- ****** SE2F View Strings ****** -->

    <!-- SE2F Options Elements START -->
    <string name="se2f_frame_title">Síntomas presentes</string>
    <string name="se2f_frame_directions">
        Seleccione las opciones que ha\nidentificado como síntomas.
    </string>

    <!-- CABEZA -->
    <string name="se2f_cabeza_s1">Dolor de cabeza</string>
    <string name="se2f_cabeza_s2">Presión arterial alta</string>
    <string name="se2f_cabeza_s3">Fiebre</string>
    <string name="se2f_cabeza_s4">Zumbido de oídos</string>
    <string name="se2f_cabeza_s5">Náuseas</string>
    <string name="se2f_cabeza_s6">Dolor de garganta</string>
    <string name="se2f_cabeza_s7">Dolor de oído</string>

    <!-- RESPIRATORIO -->
    <string name="se2f_respiratorio_s1">Tos frecuente</string>
    <string name="se2f_respiratorio_s2">Fiebre</string>
    <string name="se2f_respiratorio_s3">Dolor de garganta</string>
    <string name="se2f_respiratorio_s4">Dolor en el pecho</string>
    <string name="se2f_respiratorio_s5">Escurrimiento nasal</string>
    <string name="se2f_respiratorio_s6">Fátiga o cansancio</string>
    <string name="se2f_respiratorio_s7">Congestion nasal</string>
    <string name="se2f_respiratorio_s8">Dolor de cabeza</string>
    <string name="se2f_respiratorio_s9">Cuerpo cortado</string>
    <string name="se2f_respiratorio_s10">Dificultad para respirar</string>
    <string name="se2f_respiratorio_s11">Estornudos</string>
    <string name="se2f_respiratorio_s12">Dolor de articulaciones</string>
    <string name="se2f_respiratorio_s13">Dolor de espalda</string>

    <string name="se2f_next_directions">Presione siguiente para continuar con el\ndiagnóstico.</string>

    <!-- SE2F Dx Elements START -->
    <string name="se2f_dx_introduction">
        Dados sus síntomas\n su diagnóstico\npreliminar es:
    </string>
    <string name="se2f_dx_empty">empty</string>


    <!-- General button controls -->
    <string name="back_btn">Regresar</string>
    <string name="chain_btn">Encadenar</string>
    <string name="next_btn">Siguiente</string>
    <string name="exit_btn">Salir</string>

</resources>