<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SE2FActivity">
    <ImageView
            android:id="@+id/se2f_app_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/frame_bk"
            android:scaleType="centerInside" android:adjustViewBounds="true"
            android:cropToPadding="false" app:srcCompat="@drawable/se2f_respiratorio" android:scaleY="1.35"/>
    <TextView
            android:id="@+id/se1f_app_name"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/bigRegularText"
            app:layout_constraintHorizontal_bias="0.164"
            app:layout_constraintVertical_bias="0.046"/>
    <ImageView
            android:id="@+id/top_app_icon"
            android:layout_width="55dp"
            android:layout_height="74dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/app_icon"
            android:scaleType="centerInside" android:adjustViewBounds="true"
            android:cropToPadding="false" app:srcCompat="@drawable/diagnocom"
            app:layout_constraintVertical_bias="0.038" app:layout_constraintHorizontal_bias="0.702"/>
    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:backgroundTint="@color/black"/>
    <TextView
            android:id="@+id/se2f_frame_title"
            android:text="@string/se2f_frame_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/midRegularText"
            app:layout_constraintHorizontal_bias="0.216"
            app:layout_constraintVertical_bias="0.18"
            android:visibility="visible"/>
    <TextView
            android:id="@+id/se2f_frame_directions"
            android:text="@string/se2f_frame_directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/regularText"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintVertical_bias="0.25"
            android:visibility="visible"/>
    <ScrollView
            android:id="@+id/se2f_options"
            android:layout_width="wrap_content"
            android:layout_height="393dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintVertical_bias="0.6"
            android:visibility="visible">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <CheckBox
                    android:id="@+id/se2f_respiratorio_s1"
                    android:text="@string/se2f_respiratorio_s1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/regularText" />
            <CheckBox
                    android:id="@+id/se2f_respiratorio_s2"
                    android:text="@string/se2f_respiratorio_s2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/regularText" />
            <CheckBox
                    android:id="@+id/se2f_respiratorio_s3"
                    android:text="@string/se2f_respiratorio_s3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/regularText" />
            <CheckBox
                    android:id="@+id/se2f_respiratorio_s4"
                    android:text="@string/se2f_respiratorio_s4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/regularText" />
            <CheckBox
                    android:id="@+id/se2f_respiratorio_s5"
                    android:text="@string/se2f_respiratorio_s5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/regularText" />
            <CheckBox
                    android:id="@+id/se2f_respiratorio_s6"
                    android:text="@string/se2f_respiratorio_s6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/regularText" />
            <CheckBox
                    android:id="@+id/se2f_respiratorio_s7"
                    android:text="@string/se2f_respiratorio_s7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/regularText" />
            <CheckBox
                    android:id="@+id/se2f_respiratorio_s8"
                    android:text="@string/se2f_respiratorio_s8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/regularText" />
            <CheckBox
                    android:id="@+id/se2f_respiratorio_s9"
                    android:text="@string/se2f_respiratorio_s9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/regularText" />
            <CheckBox
                    android:id="@+id/se2f_respiratorio_s10"
                    android:text="@string/se2f_respiratorio_s10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/regularText" />
            <CheckBox
                    android:id="@+id/se2f_respiratorio_s11"
                    android:text="@string/se2f_respiratorio_s11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/regularText" />
            <CheckBox
                    android:id="@+id/se2f_respiratorio_s12"
                    android:text="@string/se2f_respiratorio_s12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/regularText" />
        </LinearLayout>
    </ScrollView>
    <TextView
            android:id="@+id/se2f_next_directions"
            android:text="@string/se2f_next_directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/regularText"
            app:layout_constraintHorizontal_bias="0.346"
            app:layout_constraintVertical_bias="0.87"
            android:visibility="visible"/>
    <TextView
            android:id="@+id/se2f_dx_introduction"
            android:text="@string/se2f_dx_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintVertical_bias="0.214"
            style="@style/midRegularText"
            android:visibility="invisible"/>
    <TextView
            android:id="@+id/se2f_dx_result"
            android:text="@string/se1f_dx_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintVertical_bias="0.754"
            style="@style/midRegularText"
            android:visibility="invisible"/>
    <Button
            android:id="@+id/se2f_back_btn"
            android:text="@string/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.957"
            style="@style/loginButton"
            app:layout_constraintHorizontal_bias="0.471"
            android:onClick="se2fBackBtn"
            android:visibility="invisible"/>
    <Button
            android:id="@+id/se2f_chain_btn"
            android:text="@string/chain_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.957"
            style="@style/loginButton"
            app:layout_constraintHorizontal_bias="0.871"
            android:onClick="get2ndDiagnose"
            android:visibility="visible"/>
    <Button
            android:id="@+id/se2f_exit_btn"
            android:text="@string/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.958"
            style="@style/loginButton"
            app:layout_constraintHorizontal_bias="0.111"
            android:onClick="closeApp"/>
</androidx.constraintlayout.widget.ConstraintLayout>