<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SE2FActivity">
    <ImageView
            android:id="@+id/se2f_app_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/frame_bk"
            android:scaleType="centerInside" android:adjustViewBounds="true"
            android:cropToPadding="false" app:srcCompat="@drawable/se1f_bk" android:scaleY="1.35"/>
    <TextView
            android:id="@+id/se1f_app_name"
            android:text="@string/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/bigRegularText"
            app:layout_constraintHorizontal_bias="0.164"
            app:layout_constraintVertical_bias="0.046"/>
    <ImageView
            android:id="@+id/top_app_icon"
            android:layout_width="55dp"
            android:layout_height="74dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:contentDescription="@string/app_icon"
            android:scaleType="centerInside" android:adjustViewBounds="true"
            android:cropToPadding="false" app:srcCompat="@drawable/diagnocom"
            app:layout_constraintVertical_bias="0.038" app:layout_constraintHorizontal_bias="0.702"/>
    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0"
            android:backgroundTint="@color/black"/>
    <TextView
            android:id="@+id/se1f_notice"
            android:text="@string/se1f_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/regularText"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintVertical_bias="0.359"
            tools:visibility="gone"/>
    <Button
            android:id="@+id/se1f_accept_notice"
            android:text="@string/se1f_accept_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.739"
            style="@style/loginButton"
            android:onClick="noticeAccepted"
            tools:visibility="gone"/>
    <Button
            android:id="@+id/se1f_decline_notice"
            android:text="@string/se1f_decline_notice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.828"
            style="@style/loginButton"
            app:layout_constraintHorizontal_bias="0.498"
            android:onClick="closeApp"
            tools:visibility="gone"/>
    <TextView
            android:id="@+id/se1f_frame_title"
            android:text="@string/se1f_frame_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/midRegularText"
            app:layout_constraintHorizontal_bias="0.216"
            app:layout_constraintVertical_bias="0.194"
            android:visibility="invisible"/>
    <TextView
            android:id="@+id/se1f_frame_directions"
            android:text="@string/se1f_frame_directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/regularText"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintVertical_bias="0.272"
            android:visibility="invisible"/>
    <RadioGroup
            android:id="@+id/se1f_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.280"
            app:layout_constraintVertical_bias="0.540"
            android:visibility="invisible">
        <RadioButton
                android:id="@+id/se1f_d_cabeza"
                android:text="@string/se1f_d_cabeza"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/regularText"/>
        <RadioButton
                android:id="@+id/se1f_d_respiratorio"
                android:text="@string/se1f_d_respiratorio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/regularText"/>
        <RadioButton
                android:id="@+id/se1f_d_digestivo"
                android:text="@string/se1f_d_digestivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/regularText"/>
        <RadioButton
                android:id="@+id/se1f_d_interno"
                android:text="@string/se1f_d_interno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/regularText"/>
        <RadioButton
                android:id="@+id/se1f_d_urinario"
                android:text="@string/se1f_d_urinario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/regularText"/>
        <RadioButton
                android:id="@+id/se1f_d_cutaneo"
                android:text="@string/se1f_d_cutaneo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/regularText"/>
    </RadioGroup>
    <TextView
            android:id="@+id/se1f_next_directions"
            android:text="@string/se1f_next_directions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/regularText"
            app:layout_constraintHorizontal_bias="0.346"
            app:layout_constraintVertical_bias="0.784"
            android:visibility="invisible"/>
    <TextView
            android:id="@+id/se1f_dx_introduction"
            android:text="@string/se1f_dx_introduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintVertical_bias="0.214"
            style="@style/midRegularText"
            android:visibility="invisible"/>
    <TextView
            android:id="@+id/se1f_dx_result"
            android:text="@string/se1f_dx_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintVertical_bias="0.754"
            style="@style/midRegularText"
            android:visibility="invisible"/>
    <Button
            android:id="@+id/se1f_back_btn"
            android:text="@string/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.957"
            style="@style/loginButton"
            app:layout_constraintHorizontal_bias="0.471"
            android:onClick="se1fBackBtn"
            android:visibility="invisible"/>
    <Button
            android:id="@+id/se1f_chain_btn"
            android:text="@string/chain_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.957"
            style="@style/loginButton"
            app:layout_constraintHorizontal_bias="0.871"
            android:onClick="get1stDiagnose"
            android:visibility="invisible"/>
    <Button
            android:id="@+id/se1f_exit_btn"
            android:text="@string/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.958"
            style="@style/loginButton"
            app:layout_constraintHorizontal_bias="0.111"
            android:onClick="closeApp"/>


</androidx.constraintlayout.widget.ConstraintLayout>